--- a/Lab5_Ruzzle/bin/application/Ruzzle.fxml
+++ b/Lab5_Ruzzle/bin/application/Ruzzle.fxml
@@ -1,7 +1,115 @@
 <?xml version="1.0" encoding="UTF-8"?>
-	
+
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ListView?>
 <?import javafx.scene.layout.BorderPane?>
-	
-<BorderPane xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.RuzzleController">
-	<!-- TODO Add Nodes -->
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
+
+<BorderPane xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.RuzzleController">
+   <top>
+      <Label text="Lab5-Ruzzle" BorderPane.alignment="CENTER" />
+   </top>
+   <center>
+      <HBox alignment="CENTER" spacing="15.0" BorderPane.alignment="CENTER">
+         <children>
+            <GridPane fx:id="grid" alignment="CENTER" style="-fx-background-: #EEE; -fx-border-radius: 10px; -fx-border-color: #AAA; -fx-border-width: 2px; -fx-padding: 10px;">
+              <columnConstraints>
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="50.0" minWidth="50.0" prefWidth="50.0" />
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="100.0" minWidth="50.0" prefWidth="50.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="100.0" minWidth="10.0" prefWidth="50.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="100.0" minWidth="10.0" prefWidth="50.0" />
+              </columnConstraints>
+              <rowConstraints>
+                  <RowConstraints maxHeight="100.0" minHeight="50.0" prefHeight="50.0" vgrow="SOMETIMES" />
+                <RowConstraints maxHeight="100.0" minHeight="10.0" prefHeight="50.0" vgrow="SOMETIMES" />
+                <RowConstraints maxHeight="100.0" minHeight="10.0" prefHeight="50.0" vgrow="SOMETIMES" />
+                <RowConstraints maxHeight="100.0" minHeight="10.0" prefHeight="50.0" vgrow="SOMETIMES" />
+              </rowConstraints>
+               <children>
+                  <Label fx:id="lbl1" alignment="CENTER" contentDisplay="CENTER" prefHeight="54.0" prefWidth="34.0" style="-fx-background-color: green; -fx-label-padding: 10px; -fx-background-radius: 10px;" textFill="WHITE" GridPane.halignment="CENTER">
+                     <font>
+                        <Font name="Comic Sans MS Bold" size="24.0" />
+                     </font>
+                  </Label>
+                  <Label fx:id="lbl2" alignment="CENTER" contentDisplay="CENTER" prefHeight="54.0" prefWidth="34.0" style="-fx-background-color: green; -fx-background-radius: 10px; -fx-label-padding: 10px;" textAlignment="JUSTIFY" textFill="WHITE" GridPane.columnIndex="1" GridPane.halignment="CENTER">
+                     <font>
+                        <Font name="Comic Sans MS Bold" size="24.0" />
+                     </font></Label>
+                  <Label fx:id="lbl3" alignment="CENTER" contentDisplay="CENTER" prefHeight="54.0" prefWidth="34.0" style="-fx-background-color: green; -fx-background-radius: 10px; -fx-label-padding: 10px;" textFill="WHITE" GridPane.columnIndex="2" GridPane.halignment="CENTER">
+                     <font>
+                        <Font name="Comic Sans MS Bold" size="24.0" />
+                     </font></Label>
+                  <Label fx:id="lbl4" alignment="CENTER" contentDisplay="CENTER" prefHeight="54.0" prefWidth="34.0" style="-fx-background-color: green; -fx-background-radius: 10px; -fx-label-padding: 10px;" textFill="WHITE" GridPane.columnIndex="3" GridPane.halignment="CENTER">
+                     <font>
+                        <Font name="System Bold" size="24.0" />
+                     </font></Label>
+                  <Label fx:id="lbl5" alignment="CENTER" contentDisplay="CENTER" prefHeight="54.0" prefWidth="34.0" style="-fx-background-color: green; -fx-label-padding: 10px; -fx-background-radius: 10px;" textFill="WHITE" GridPane.halignment="CENTER" GridPane.rowIndex="1">
+                     <font>
+                        <Font name="System Bold" size="24.0" />
+                     </font></Label>
+                  <Label fx:id="lbl6" alignment="CENTER" contentDisplay="CENTER" prefHeight="54.0" prefWidth="34.0" style="-fx-background-color: green; -fx-background-radius: 10px; -fx-label-padding: 10px;" textFill="WHITE" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="1">
+                     <font>
+                        <Font name="Comic Sans MS Bold" size="24.0" />
+                     </font></Label>
+                  <Label fx:id="lbl7" alignment="CENTER" contentDisplay="CENTER" prefHeight="54.0" prefWidth="34.0" style="-fx-background-color: green; -fx-background-radius: 10px; -fx-label-padding: 10px;" textFill="WHITE" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="1">
+                     <font>
+                        <Font name="Comic Sans MS Bold" size="24.0" />
+                     </font></Label>
+                  <Label fx:id="lbl8" alignment="CENTER" contentDisplay="CENTER" prefHeight="54.0" prefWidth="34.0" style="-fx-background-color: green; -fx-background-radius: 10px; -fx-label-padding: 10px;" textFill="WHITE" GridPane.columnIndex="3" GridPane.halignment="CENTER" GridPane.rowIndex="1">
+                     <font>
+                        <Font name="Comic Sans MS Bold" size="24.0" />
+                     </font></Label>
+                  <Label fx:id="lbl9" alignment="CENTER" contentDisplay="CENTER" prefHeight="54.0" prefWidth="34.0" style="-fx-background-color: green; -fx-background-radius: 10px; -fx-label-padding: 10px;" textFill="WHITE" GridPane.halignment="CENTER" GridPane.rowIndex="2">
+                     <font>
+                        <Font name="Comic Sans MS Bold" size="24.0" />
+                     </font></Label>
+                  <Label fx:id="lbl10" alignment="CENTER" contentDisplay="CENTER" prefHeight="54.0" prefWidth="34.0" style="-fx-background-color: green; -fx-background-radius: 10px; -fx-label-padding: 10px;" textFill="WHITE" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="2">
+                     <font>
+                        <Font name="Comic Sans MS Bold" size="24.0" />
+                     </font></Label>
+                  <Label fx:id="lbl11" alignment="CENTER" contentDisplay="CENTER" prefHeight="54.0" prefWidth="34.0" style="-fx-background-color: green; -fx-background-radius: 10px; -fx-label-padding: 10px;" textFill="WHITE" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="2">
+                     <font>
+                        <Font name="Comic Sans MS Bold" size="24.0" />
+                     </font></Label>
+                  <Label fx:id="lbl12" alignment="CENTER" prefHeight="54.0" prefWidth="34.0" style="-fx-background-color: green; -fx-label-padding: 10px; -fx-background-radius: 10px;" textFill="WHITE" GridPane.columnIndex="3" GridPane.halignment="CENTER" GridPane.rowIndex="2">
+                     <font>
+                        <Font name="Comic Sans MS Bold" size="24.0" />
+                     </font></Label>
+                  <Label fx:id="lbl13" alignment="CENTER" contentDisplay="CENTER" prefHeight="54.0" prefWidth="34.0" style="-fx-background-color: green; -fx-background-radius: 10px; -fx-label-padding: 10px;" textFill="WHITE" GridPane.halignment="CENTER" GridPane.rowIndex="3">
+                     <font>
+                        <Font name="Comic Sans MS Bold" size="24.0" />
+                     </font></Label>
+                  <Label fx:id="lbl14" alignment="CENTER" contentDisplay="CENTER" prefHeight="54.0" prefWidth="34.0" style="-fx-background-color: green; -fx-label-padding: 10px; -fx-background-radius: 10px;" textFill="WHITE" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="3">
+                     <font>
+                        <Font name="Comic Sans MS Bold" size="24.0" />
+                     </font></Label>
+                  <Label fx:id="lbl15" alignment="CENTER" contentDisplay="CENTER" prefHeight="54.0" prefWidth="34.0" style="-fx-background-color: green; -fx-label-padding: 10px; -fx-background-radius: 10px;" textFill="WHITE" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="3">
+                     <font>
+                        <Font name="Comic Sans MS" size="24.0" />
+                     </font></Label>
+                  <Label fx:id="lbl16" alignment="CENTER" contentDisplay="CENTER" prefHeight="54.0" prefWidth="34.0" style="-fx-background-color: green; -fx-background-radius: 10px; -fx-label-padding: 10px;" textFill="WHITE" GridPane.columnIndex="3" GridPane.halignment="CENTER" GridPane.rowIndex="3">
+                     <font>
+                        <Font name="Comic Sans MS Bold" size="24.0" />
+                     </font></Label>
+               </children>
+            </GridPane>
+            <VBox alignment="CENTER" spacing="10.0">
+               <children>
+                  <Button fx:id="buttonGenera" mnemonicParsing="false" onAction="#doGenera" text="Genera" />
+                  <ListView fx:id="listResult" prefHeight="200.0" prefWidth="200.0" />
+               </children>
+            </VBox>
+         </children>
+         <BorderPane.margin>
+            <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+         </BorderPane.margin>
+      </HBox>
+   </center>
 </BorderPane>
